Closes #12750