@@ -118,18 +118,38 @@ public class BillAnalyticsService {
         return departmentFacade.findByJpql(jpql, params);
     }
 
+    
+    public List<Department> fetchBilledDepartmentsWithTransactions(List<BillTypeAtomic> billTypes, Date fromDate, Date toDate) {
+        if (billTypes == null || billTypes.isEmpty()) {
+            return new ArrayList<>();
+        }
+        String jpql = "select distinct b.department "
+                + "from Bill b "
+                + "where b.retired = false "
+                + "and b.createdAt between :fd and :td "
+                + "and b.billTypeAtomic in :bts "
+                + "order by b.department.name";
+
+        Map<String, Object> params = new HashMap<>();
+        params.put("fd", fromDate);
+        params.put("td", toDate);
+        params.put("bts", billTypes);
+
+        return departmentFacade.findByJpql(jpql, params);
+    }
+
     public void fillBundleForOpdServiceCounts(ReportTemplateRowBundle inputBundle, Date fromDate, Date toDate) {
-        List<BillTypeAtomic> billedTypes = new ArrayList<>(List.of(
+        List<BillTypeAtomic> billedTypes = new ArrayList<>(Arrays.asList(
                 BillTypeAtomic.OPD_BILL_WITH_PAYMENT,
                 BillTypeAtomic.OPD_BILL_PAYMENT_COLLECTION_AT_CASHIER
         ));
 
-        List<BillTypeAtomic> cancelledTypes = new ArrayList<>(List.of(
+        List<BillTypeAtomic> cancelledTypes = new ArrayList<>(Arrays.asList(
                 BillTypeAtomic.OPD_BILL_CANCELLATION,
                 BillTypeAtomic.OPD_BILL_CANCELLATION_DURING_BATCH_BILL_CANCELLATION
         ));
 
-        List<BillTypeAtomic> returnedTypes = new ArrayList<>(List.of(
+        List<BillTypeAtomic> returnedTypes = new ArrayList<>(Collections.singletonList(
                 BillTypeAtomic.OPD_BILL_REFUND
         ));
 
@@ -139,6 +159,11 @@ public class BillAnalyticsService {
         allTypes.addAll(returnedTypes);
 
         List<Department> transactionDepartments = fetchBillItemsItemDepartmentsWithTransactions(allTypes, fromDate, toDate);
+
+        long totalBilled = 0;
+        long totalCancelled = 0;
+        long totalReturned = 0;
+        long totalNet = 0;
 
         for (Department txDept : transactionDepartments) {
             ReportTemplateRow row = new ReportTemplateRow();
@@ -155,8 +180,251 @@ public class BillAnalyticsService {
             row.setNetCount(net);
 
             inputBundle.getReportTemplateRows().add(row);
+
+            totalBilled += billed;
+            totalCancelled += cancelled;
+            totalReturned += returned;
+            totalNet += net;
         }
 
+        inputBundle.setBilledCount(totalBilled);
+        inputBundle.setCancelledCount(totalCancelled);
+        inputBundle.setReturnCount(totalReturned);
+        inputBundle.setNetCount(totalNet);
+    }
+
+    public void fillBundleForCollectionCentreServiceCounts(ReportTemplateRowBundle inputBundle, Date fromDate, Date toDate) {
+        List<BillTypeAtomic> billedTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.CC_BILL
+        ));
+
+        List<BillTypeAtomic> cancelledTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.CC_BILL_CANCELLATION
+        ));
+
+        List<BillTypeAtomic> returnedTypes = new ArrayList<>(Collections.singletonList(
+                BillTypeAtomic.CC_BILL_REFUND
+        ));
+
+        List<BillTypeAtomic> allTypes = new ArrayList<>();
+        allTypes.addAll(billedTypes);
+        allTypes.addAll(cancelledTypes);
+        allTypes.addAll(returnedTypes);
+
+        List<Department> transactionDepartments = fetchBillItemsItemDepartmentsWithTransactions(allTypes, fromDate, toDate);
+
+        long totalBilled = 0;
+        long totalCancelled = 0;
+        long totalReturned = 0;
+        long totalNet = 0;
+
+        for (Department txDept : transactionDepartments) {
+            ReportTemplateRow row = new ReportTemplateRow();
+            row.setDepartment(txDept);
+
+            long billed = countBillsByBillItemDepartment(txDept, billedTypes, fromDate, toDate);
+            long cancelled = countBillsByBillItemDepartment(txDept, cancelledTypes, fromDate, toDate);
+            long returned = countBillsByBillItemDepartment(txDept, returnedTypes, fromDate, toDate);
+            long net = billed - (cancelled + returned);
+
+            row.setBilledCount(billed);
+            row.setCancelledCount(cancelled);
+            row.setReturnCount(returned);
+            row.setNetCount(net);
+
+            inputBundle.getReportTemplateRows().add(row);
+
+            totalBilled += billed;
+            totalCancelled += cancelled;
+            totalReturned += returned;
+            totalNet += net;
+        }
+
+        inputBundle.setBilledCount(totalBilled);
+        inputBundle.setCancelledCount(totalCancelled);
+        inputBundle.setReturnCount(totalReturned);
+        inputBundle.setNetCount(totalNet);
+    }
+
+    public void fillBundleForInpatientServiceCounts(ReportTemplateRowBundle inputBundle, Date fromDate, Date toDate) {
+        List<BillTypeAtomic> billedTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.INWARD_SERVICE_BILL
+        ));
+
+        List<BillTypeAtomic> cancelledTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.INWARD_SERVICE_BILL_CANCELLATION,
+                BillTypeAtomic.INWARD_SERVICE_BILL_CANCELLATION_DURING_BATCH_BILL_CANCELLATION
+        ));
+
+        List<BillTypeAtomic> returnedTypes = new ArrayList<>(Collections.singletonList(
+                BillTypeAtomic.INWARD_SERVICE_BILL_REFUND
+        ));
+
+        List<BillTypeAtomic> allTypes = new ArrayList<>();
+        allTypes.addAll(billedTypes);
+        allTypes.addAll(cancelledTypes);
+        allTypes.addAll(returnedTypes);
+
+        List<Department> transactionDepartments = fetchBillItemsItemDepartmentsWithTransactions(allTypes, fromDate, toDate);
+
+        long totalBilled = 0;
+        long totalCancelled = 0;
+        long totalReturned = 0;
+        long totalNet = 0;
+
+        for (Department txDept : transactionDepartments) {
+            ReportTemplateRow row = new ReportTemplateRow();
+            row.setDepartment(txDept);
+
+            long billed = countBillsByBillItemDepartment(txDept, billedTypes, fromDate, toDate);
+            long cancelled = countBillsByBillItemDepartment(txDept, cancelledTypes, fromDate, toDate);
+            long returned = countBillsByBillItemDepartment(txDept, returnedTypes, fromDate, toDate);
+            long net = billed - (cancelled + returned);
+
+            row.setBilledCount(billed);
+            row.setCancelledCount(cancelled);
+            row.setReturnCount(returned);
+            row.setNetCount(net);
+
+            inputBundle.getReportTemplateRows().add(row);
+
+            totalBilled += billed;
+            totalCancelled += cancelled;
+            totalReturned += returned;
+            totalNet += net;
+        }
+
+        inputBundle.setBilledCount(totalBilled);
+        inputBundle.setCancelledCount(totalCancelled);
+        inputBundle.setReturnCount(totalReturned);
+        inputBundle.setNetCount(totalNet);
+    }
+
+    public void fillBundleForOpdPharmacyCounts(ReportTemplateRowBundle inputBundle, Date fromDate, Date toDate) {
+        List<BillTypeAtomic> billedTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.PHARMACY_RETAIL_SALE,
+                BillTypeAtomic.PHARMACY_RETAIL_SALE_PREBILL_SETTLED_AT_CASHIER,
+                BillTypeAtomic.PHARMACY_WHOLESALE,
+                BillTypeAtomic.PHARMACY_RETAIL_SALE_WITHOUT_STOCKS
+        ));
+
+        List<BillTypeAtomic> cancelledTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.PHARMACY_RETAIL_SALE_CANCELLED,
+                BillTypeAtomic.PHARMACY_RETURN_ITEMS_AND_PAYMENTS_CANCELLATION,
+                BillTypeAtomic.PHARMACY_WHOLESALE_CANCELLED
+        ));
+
+        List<BillTypeAtomic> returnedTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.PHARMACY_RETAIL_SALE_REFUND,
+                BillTypeAtomic.PHARMACY_RETAIL_SALE_WITHOUT_STOCKS,
+                BillTypeAtomic.PHARMACY_WHOLESALE_REFUND
+        ));
+
+        List<BillTypeAtomic> allTypes = new ArrayList<>();
+        allTypes.addAll(billedTypes);
+        allTypes.addAll(cancelledTypes);
+        allTypes.addAll(returnedTypes);
+
+        List<Department> transactionDepartments = fetchBilledDepartmentsWithTransactions(allTypes, fromDate, toDate);
+
+        long totalBilled = 0;
+        long totalCancelled = 0;
+        long totalReturned = 0;
+        long totalNet = 0;
+
+        for (Department txDept : transactionDepartments) {
+            ReportTemplateRow row = new ReportTemplateRow();
+            row.setDepartment(txDept);
+
+            long billed = countBillsByBilledDepartment(txDept, billedTypes, fromDate, toDate);
+            long cancelled = countBillsByBilledDepartment(txDept, cancelledTypes, fromDate, toDate);
+            long returned = countBillsByBilledDepartment(txDept, returnedTypes, fromDate, toDate);
+            long net = billed - (cancelled + returned);
+
+            row.setBilledCount(billed);
+            row.setCancelledCount(cancelled);
+            row.setReturnCount(returned);
+            row.setNetCount(net);
+
+            inputBundle.getReportTemplateRows().add(row);
+
+            totalBilled += billed;
+            totalCancelled += cancelled;
+            totalReturned += returned;
+            totalNet += net;
+        }
+
+        inputBundle.setBilledCount(totalBilled);
+        inputBundle.setCancelledCount(totalCancelled);
+        inputBundle.setReturnCount(totalReturned);
+        inputBundle.setNetCount(totalNet);
+    }
+
+    public void fillBundleForInpatientPharmacyCounts(ReportTemplateRowBundle inputBundle, Date fromDate, Date toDate) {
+        List<BillTypeAtomic> billedTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.DIRECT_ISSUE_INWARD_MEDICINE,
+                BillTypeAtomic.DIRECT_ISSUE_THEATRE_MEDICINE,
+                BillTypeAtomic.ISSUE_MEDICINE_ON_REQUEST_INWARD,
+                BillTypeAtomic.ISSUE_MEDICINE_ON_REQUEST_THEATRE,
+                BillTypeAtomic.ACCEPT_ISSUED_MEDICINE_INWARD,
+                BillTypeAtomic.ACCEPT_ISSUED_MEDICINE_THEATRE
+        ));
+
+        List<BillTypeAtomic> cancelledTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.DIRECT_ISSUE_INWARD_MEDICINE_CANCELLATION,
+                BillTypeAtomic.DIRECT_ISSUE_THEATRE_MEDICINE_CANCELLATION,
+                BillTypeAtomic.ISSUE_MEDICINE_ON_REQUEST_INWARD_CANCELLATION,
+                BillTypeAtomic.ISSUE_MEDICINE_ON_REQUEST_THEATRE_CANCELLATION
+        ));
+
+        List<BillTypeAtomic> returnedTypes = new ArrayList<>(Arrays.asList(
+                BillTypeAtomic.DIRECT_ISSUE_INWARD_MEDICINE_RETURN,
+                BillTypeAtomic.DIRECT_ISSUE_THEATRE_MEDICINE_RETURN,
+                BillTypeAtomic.ISSUE_MEDICINE_ON_REQUEST_INWARD_RETURN,
+                BillTypeAtomic.RETURN_MEDICINE_INWARD,
+                BillTypeAtomic.RETURN_MEDICINE_THEATRE,
+                BillTypeAtomic.ACCEPT_RETURN_MEDICINE_INWARD,
+                BillTypeAtomic.ACCEPT_RETURN_MEDICINE_THEATRE
+        ));
+
+        List<BillTypeAtomic> allTypes = new ArrayList<>();
+        allTypes.addAll(billedTypes);
+        allTypes.addAll(cancelledTypes);
+        allTypes.addAll(returnedTypes);
+
+        List<Department> transactionDepartments = fetchBilledDepartmentsWithTransactions(allTypes, fromDate, toDate);
+
+        long totalBilled = 0;
+        long totalCancelled = 0;
+        long totalReturned = 0;
+        long totalNet = 0;
+
+        for (Department txDept : transactionDepartments) {
+            ReportTemplateRow row = new ReportTemplateRow();
+            row.setDepartment(txDept);
+
+            long billed = countBillsByBilledDepartment(txDept, billedTypes, fromDate, toDate);
+            long cancelled = countBillsByBilledDepartment(txDept, cancelledTypes, fromDate, toDate);
+            long returned = countBillsByBilledDepartment(txDept, returnedTypes, fromDate, toDate);
+            long net = billed - (cancelled + returned);
+
+            row.setBilledCount(billed);
+            row.setCancelledCount(cancelled);
+            row.setReturnCount(returned);
+            row.setNetCount(net);
+
+            inputBundle.getReportTemplateRows().add(row);
+
+            totalBilled += billed;
+            totalCancelled += cancelled;
+            totalReturned += returned;
+            totalNet += net;
+        }
+
+        inputBundle.setBilledCount(totalBilled);
+        inputBundle.setCancelledCount(totalCancelled);
+        inputBundle.setReturnCount(totalReturned);
+        inputBundle.setNetCount(totalNet);
     }
 
     public long countBillsByBillItemDepartment(Department department, List<BillTypeAtomic> billTypes, Date fromDate, Date toDate) {
@@ -171,6 +439,27 @@ public class BillAnalyticsService {
                 + "and bi.item.department = :dept "
                 + "and bi.bill.createdAt between :fd and :td "
                 + "and bi.bill.billTypeAtomic in :bts";
+
+        Map<String, Object> params = new HashMap<>();
+        params.put("dept", department);
+        params.put("fd", fromDate);
+        params.put("td", toDate);
+        params.put("bts", billTypes);
+
+        return billItemFacade.findLongByJpql(jpql, params); // or use count method from AbstractFacade
+    }
+
+    public long countBillsByBilledDepartment(Department department, List<BillTypeAtomic> billTypes, Date fromDate, Date toDate) {
+        if (department == null || billTypes == null || billTypes.isEmpty()) {
+            return 0L;
+        }
+
+        String jpql = "select count(b) "
+                + "from Bill b "
+                + "where b.retired = false "
+                + "and b.department = :dept "
+                + "and b.createdAt between :fd and :td "
+                + "and b.billTypeAtomic in :bts";
 
         Map<String, Object> params = new HashMap<>();
         params.put("dept", department);
